Don't split small text on picture sections and fix On mobile view of the Home Page, the text isn't overlaying the video properly

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -32,6 +32,14 @@
         top: 0;
       }
     }
+    &.slide-video{
+      @media screen and (max-width: 1200px){
+        background:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../../assets/slides/slide1.jpg');
+        video{
+          display: none;
+        }
+      }
+    }
     &.slide-1{
       background:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../../assets/slides/slide1.jpg');
     }
